# m1s_dock_baremetal

./: CMakeLists.txt  Makefile  README.md  bl808_flash_m0.ld  board.c  board.h  project.build  sdk_intf_lib.cmake
bsp/: CMakeLists.txt
cmake/: bouffalo_sdk-config.cmake
drivers/: CMakeLists.txt
drivers/lhal/: CMakeLists.txt
drivers/lhal/include/arch/risc-v/t-head/Core/Include/: core_rv32.h  csi_rv32_gcc.h
drivers/soc/bl808/: CMakeLists.txt
drivers/soc/bl808/startup/m0/: start.S  system_bl808.c
examples/: CMakeLists.txt
examples/helloworld/: CMakeLists.txt  Makefile  main.c
utils/: CMakeLists.txt
